--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         body { overflow: hidden; }
         canvas { position: absolute; left: 0; top: 0; }
     </style>
+    <script src="http://cdn.couchfriends.com/api/couchfriends.api-latest.js"></script>
 </head>
 <body>
 <canvas id="game"></canvas>
